<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/sideNavbar">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/your_name"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_subject"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/your_subject"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_message"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/your_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:height="180dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

        <Button
            android:id="@+id/post_message"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="@drawable/register_button"
            android:paddingLeft="15dp"
            android:paddingTop="1dp"
            android:paddingRight="15dp"
            android:paddingBottom="1dp"
            android:text="@string/contact_form_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>