<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicineDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:showDividers="middle"
            android:divider="@drawable/linear_layout_divider"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="24dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E6E2E2">

                    <Button
                        android:id="@+id/book_button"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/white"
                        android:background="@drawable/background"
                        android:text="Book"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <ImageView
                        android:id="@+id/medicine_image"
                        android:layout_width="96dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/crocin_advance_500mg_tablet_15_s_0" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="80dp"
                        android:layout_height="43dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/background"
                        android:layout_marginBottom="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/book_button" />

                    <TextView
                        android:id="@+id/mfg_name"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat"
                        android:scrollHorizontally="false"
                        android:text="@string/mfg_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/medicine_weight" />

                    <TextView
                        android:id="@+id/tablets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/tablets"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mfg_name" />

                    <TextView
                        android:id="@+id/medicine_name"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/montserrat"
                        android:scrollHorizontally="false"
                        android:text="@string/medicine_name"
                        android:textColor="@color/black"
                        android:textSize="22dp"
                        app:layout_constraintEnd_toStartOf="@+id/medicine_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/medicine_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/medicine_weight"
                        android:textColor="#131313"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/medicine_name" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/what_is_que"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/montserrat"
                        android:text="What is CROCIN ADVANCE?"
                        android:textColor="@color/black"
                        android:textSize="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/what_is_ans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="#E81123"
                        android:text="CROCIN ADVANCE contains Paracetamol which belongs to a group of medicines called analgesic and antipyretics"
                        android:textAlignment="inherit"
                        android:textColor="#1E1C1C"
                        android:textSize="14dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/what_is_que" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/what_is_que2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/montserrat"
                        android:text="Disclaimer:"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/what_is_ans2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/montserrat"
                        android:text="The contents of this website are for informational purposes only and not intended to be a substitute for professional medical advice, diagnosis, or treatment. Please seek the advice of a physician or other qualified health provider with any questions you may have regarding a medical condition. Do not disregard professional medical advice or delay in seeking it because of something you have read on this website."
                        android:textAlignment="inherit"
                        android:textColor="#1E1C1C"
                        android:textSize="12dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/what_is_que2" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>